# syspro-cpp-tasks

./: .clang-format  README.md  meson.build
src/: avl.hpp  container.hpp  get_index_of_first_match.hpp  instance_limiter.hpp  io.hpp  io_impl.hpp  matrix.hpp  plane.hpp  scoped_ptr.hpp  template-allocate.hpp  template-primes.cpp  template-primes.hpp
src/io/: io.hpp  iobuf.hpp  ioimpl.hpp
tests/: test_avl.cc  test_avl.cpp  test_container.cpp  test_get_index_of_first_match.cpp  test_instance_limiter.cpp  test_io.cpp  test_matrix.cpp  test_template_allocate.cpp  test_template_primes.cpp
